--- a/docs/styles.css
+++ b/docs/styles.css
@@ -4,3 +4,12 @@ body{
     text-align: center;
     padding: 20px 0 0;
 }
+
+.main-page{
+    padding: 40px 0 60px;
+    max-width: 1200px;
+    margin: 0 auto; /* 水平居中 */
+    background-color: #f2f2f2;
+    box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+}
