--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,3 +13,28 @@ body{
     box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
 }
+
+.btntp{
+    background-color: #49e;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 10px 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: none;
+    cursor: pointer;
+    border: none;
+    border-radius: 6px;
+    height: 50px;
+    transition: all 0.3s ease;
+}
+
+.btntp:hover{
+    transform: translateY(-3px);
+}
+
+.btntp:active{
+    transition-duration: 0.1s;
+    background-color: #27c;
+}
