--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,11 +7,34 @@ body{
     padding: 20px 0 0;
 }
 
-.announcement{
-    color: #333;
+h1{
+    color: #111;
+    font-size: 32px;
+    margin-bottom: 30px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 5px;
 }
 
-.main-page{
+h2{
+    color: #333;
+    margin-bottom: 30px;
+}
+
+.announcement{
+    color: #222;
+    padding: 20px 0 30px;
+    max-width: 600px;
+    margin: 0 auto; /* 水平居中 */
+    background-color: #ccc;
+    border-radius: 10px;
+}
+
+.announcement h1{
+    color: #222;
+    text-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.main-page, .blog-main-page{
     padding: 40px 0 60px;
     max-width: 1200px;
     margin: 0 auto; /* 水平居中 */
